--- a/modules/helm/cert-manager/tmpl/production-issuer-dns.tmpl
+++ b/modules/helm/cert-manager/tmpl/production-issuer-dns.tmpl
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: admin@example.com
+    email: ${admin_email}
     privateKeySecretRef:
       name: letsencrypt-dns-prod
     solvers:
