--- a/modules/helm/cert-manager/tmpl/production-issuer-http.tmpl
+++ b/modules/helm/cert-manager/tmpl/production-issuer-http.tmpl
@@ -7,7 +7,7 @@ spec:
     # The ACME server URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: admin@example.com
+    email: ${admin_email}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       # Secret resource used to store the account's private key.
