Adds experimental extauthzServerRef

--- a/modules/api-gateway/gloo-ee/tmpl/values.tmpl
+++ b/modules/api-gateway/gloo-ee/tmpl/values.tmpl
@@ -34,6 +34,10 @@ gloo:
     clusterName: cluster.local
 
 global:
+  extensions:
+    extAuthzServerRef:
+      name: ext_authz
+      namespace: gloo-system
   glooRbac:
     create: true
     namespaced: false
